# BiliVideoMerge

./: .gitignore  CMakeLists.txt  README.md  Resources.qrc  VersionInfo.rc.in  biliwidget.cpp  biliwidget.h  biliwidget.ui  bmergewidget.cpp  bmergewidget.h  bmergewidget.ui  main.cpp
